fix scrollbar for textarea, add test for title, fix some style

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -42,7 +42,7 @@ h4 {
 .flexPage {
   display: flex;
   width: 100%;
-  min-height: 100vh;
+  height: 100vh;
 }
 
 body {
