--- a/src/features/AuthByEmail/ui/RegisterForm/RegisterForm.module.scss
+++ b/src/features/AuthByEmail/ui/RegisterForm/RegisterForm.module.scss
@@ -5,7 +5,7 @@
   width: 30%;
   min-width: 550px;
 
-  padding: 3.5rem;
+  padding: 3rem 3.5rem;
   display: inline-flex;
   align-items: center;
   flex-direction: column;
